# proyecto

./: README.md  config.py  pyproject.toml  requirements.txt
proyecto_titanic/: pyproject.toml
server/: config.py  data_modules.py  main.py
server/models/: models.py
server/predictor/: config.py  passenger_predictor.py
server/tests/unit/: test_passanger_preditor.py
train/: config.py  data_modules.py  main.py  train_model.py
train/trained_models/: logistic_regression_output.pkl
