[tool.poetry]
name = "proyecto-titanic"
version = "0.1.0"
description = "\"Proyecto Predict Titanic\""
authors = ["Copernico Contreras <contrcf@cat.com>"]
readme = "README.md"
packages = [{include = "proyecto_titanic"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
sklearn = "^0.0.post1"
pytest = "^7.2.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
