[tool.poetry]
name = "Proyecto Titanic"
version = "0.1.0"
description = "Proyecto Titanic"
authors = ["contrcf <contrf@cat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
pytest = "^7.2.0"
numpy = "^1.23.5"
sklearn = "^0.0.post1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
