[tool.poetry]
name = "proyecto-titanic"
version = "0.1.0"
description = ""
authors = ["contrcf <contrf@cat.comqa:>"]
readme = "README.md"
packages = [{include = "proyecto_titanic"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
